First pass at file upload

--- a/app/views/reports/_minform.html.erb
+++ b/app/views/reports/_minform.html.erb
@@ -11,27 +11,27 @@
     </div>
   <% end %>
 
-  <div class="field">
+  <div class="field form-hidden">
     <%= f.label :latitude %><br />
     <%= f.text_field :latitude %>
   </div>
-  <div class="field">
+  <div class="field form-hidden">
     <%= f.label :longitude %><br />
     <%= f.text_field :longitude %>
   </div>
-  <div class="field">
+  <div class="field form-hidden">
     <%= f.label :date %><br />
     <%= f.date_select :date %>
   </div>
-  <div class="field">
+  <div class="field form-hidden">
     <%= f.label :email %><br />
     <%= f.text_field :email %>
   </div>
-  <div class="field">
+  <div class="field form-hidden">
     <%= f.label :name %><br />
     <%= f.text_field :name %>
   </div>
-  <div class="field">
+  <div class="field form-hidden">
     <%= f.label :description %><br />
     <%= f.text_field :description %>
   </div>
