--- a/app/views/reports/new.html.erb
+++ b/app/views/reports/new.html.erb
@@ -7,6 +7,4 @@
       <li><a href="sms:404492629" class='btddn'>Text us!</a></li>
     </ul>
 
-    <form id='picture-upload'>
-      Select a picture: <input type="file">
-    </form>
+    <%= render 'minform' %>
