Added paperclip, forward progress on landing page

--- a/app/views/reports/_form.html.erb
+++ b/app/views/reports/_form.html.erb
@@ -37,7 +37,7 @@
   </div>
   <div class="field">
     <%= f.label :picfile %><br />
-    <%= f.file_field :picfile %>
+    <%= f.text_field :picfile %>
   </div>
   <div class="actions">
     <%= f.submit %>
