Less minimal than I would like selection on an OpenStreetMap map

--- a/app/views/reports/new.html.erb
+++ b/app/views/reports/new.html.erb
@@ -17,8 +17,8 @@
     <%= raw '<br/>' * 50  %>
     <div id="point-map">
       <%= raw '<br/>' * 5  %>
-      <div class="hero-unit">
-        <iframe id="mapFrame" style="height:250px"></iframe>
+      <div class="hero-unit" style="height:280px">
+        <div id="mapFrameDiv"></div>
       </div>
     </div>
     <%= raw '<br/>' * 50  %>
